# libexeng

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GUIDELINES  LICENSE  README  doxyfile  libexeng.kdev4
examples/computeinterop/: CMakeLists.txt  ComputeInteropApp.cpp  ComputeInteropApp.hpp  MeshManipulator.cpp  MeshManipulator.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PhongRenderer.cpp  PhongRenderer.hpp  computeinterop.cpp
examples/meshload/: CMakeLists.txt  RasterRenderer.hpp  fshader.cpp  fshader.hpp  meshload.cpp  vshader.hpp
examples/scene/: AssetRenderer.cpp  AssetRenderer.hpp  CMakeLists.txt  RasterRenderer.cpp  RasterRenderer.hpp  SceneRenderer.cpp  SceneRenderer.hpp  SceneRendererGeneric.cpp  SceneRendererGeneric.hpp  fshader.cpp  scene.cpp  vshader.cpp
examples/simplemesh/: CMakeLists.txt  simplemesh.cpp
plugins/xe.cm.cl/: BufferCL.cpp  BufferCL.hpp  BufferCL_GL.cpp  BufferCL_GL.hpp  CMakeLists.txt  ComputeModuleCL.cpp  ComputeModuleCL.hpp  ComputeModuleFactoryCL.cpp  ComputeModuleFactoryCL.hpp  ContextCL.cpp  ContextCL.hpp  DeviceCL.cpp  DeviceCL.hpp  ImageCL.cpp  ImageCL.hpp  KernelCL.cpp  KernelCL.hpp  MemCL.cpp  MemCL.hpp  PlatformCL.cpp  PlatformCL.hpp  PlatformInfoCL.cpp  PlatformInfoCL.hpp  PluginCL.cpp  PluginCL.hpp  ProgramCL.cpp  ProgramCL.hpp  ProgramModuleCL.cpp  ProgramModuleCL.hpp  QueueCL.cpp  QueueCL.hpp
plugins/xe.gfx.assimp/: CMakeLists.txt  MeshLoaderAssimp.cpp  MeshLoaderAssimp.hpp  PluginAssimp.cpp  PluginAssimp.hpp
plugins/xe.gfx.fi/: BufferFI.cpp  BufferFI.hpp  CMakeLists.txt  ImageFI.cpp  ImageFI.hpp  ImageLoaderFI.cpp  ImageLoaderFI.hpp  PluginFI.cpp
plugins/xe.gfx.gl/: CMakeLists.txt
plugins/xe.gfx.gl3/: CMakeLists.txt
plugins/xe.gfx.lwo/: Array.hpp  CMakeLists.txt  List.hpp  MeshLoaderLWO.cpp  MeshLoaderLWO.hpp  Object.cpp  Object.hpp  PluginLWO.cpp  lwo.hpp
plugins/xe.sg.scene_xml/: CMakeLists.txt  SceneLoaderXML.cpp
src/: CMakeLists.txt  CMakeLists.txt~
src/CL/: cl-xe.hpp  cl.hpp
src/UnitTest++/: CMakeLists.txt
src/exeng/: Boundary.hpp  Boundary.inl  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Common.hpp  Common.inl  Config.hpp  Core.cpp  Core.hpp  DataType.hpp  DataType.inl  DataTypes.hpp  DetectEnv.hpp  Enum.cpp  Enum.hpp  Exception.cpp  Exception.hpp  Exeng.hpp  Forward.hpp  HeapBuffer.cpp  HeapBuffer.hpp  ISerializable.cpp  ISerializable.hpp  Matrix.hpp  Matrix.inl  NumericTraits.hpp  Object.cpp  Object.hpp  Operations.hpp  Operations.inl  Product.hpp  ProductLoader.hpp  ProductManager.hpp  ProductManagerImpl.hpp  Quaternion.inl  Resource.cpp  Resource.hpp  ResourceFactory.cpp  ResourceFactory.hpp  (+23 more)
src/exeng-compute-cl/: CMakeLists.txt
src/exeng-graphics-gl3/: CMakeLists.txt  GL3BufferStatus.hpp  GL3Debug.cpp  GL3Debug.hpp  GL3GraphicsDriver.cpp  GL3GraphicsDriver.hpp  GL3GraphicsDriverFactory.cpp  GL3GraphicsDriverFactory.hpp  GL3Plugin.cpp  GL3Plugin.hpp  GL3Shader.cpp  GL3Shader.hpp  GL3ShaderProgram.cpp  GL3ShaderProgram.hpp  GL3Texture.cpp  GL3Texture.hpp  GL3Utils.hpp  GL3VertexBuffer.cpp  GL3VertexBuffer.hpp  Locker.cpp
src/exeng.compute.cl/: CMakeLists.txt
src/exeng.demo/: Assets.xml  CMakeLists.txt  Demo01.cpp  Fragment.glsl  Vertex.glsl
src/exeng.graphics.gl3/: CMakeLists.txt  GL3Buffer.cpp  GL3Buffer.hpp  GL3BufferStatus.hpp  GL3Debug.cpp  GL3Debug.hpp  GL3GraphicsDriver.cpp  GL3GraphicsDriver.hpp  GL3GraphicsDriverFactory.cpp  GL3GraphicsDriverFactory.hpp  GL3IndexBuffer.cpp  GL3IndexBuffer.hpp  GL3MeshSubset.cpp  GL3MeshSubset.hpp  GL3Plugin.cpp  GL3Plugin.hpp  GL3Shader.cpp  GL3Shader.hpp  GL3ShaderProgram.cpp  GL3ShaderProgram.hpp  GL3Texture.cpp  GL3Texture.hpp  GL3Utils.hpp  GL3VertexBuffer.cpp  GL3VertexBuffer.hpp  Locker.cpp  Locker.hpp
src/exeng.main/: CMakeLists.txt  Main.cpp  Main.hpp
src/exeng.raytracer/: CMakeLists.txt  FpsCounter.cpp  FpsCounter.hpp  FrameCounter.cpp  FrameCounter.hpp  RayTracerApp.cpp  RayTracerApp.hpp  RayTracerApp2.cpp  RayTracerApp2.hpp  RayTracerSceneRenderer.cpp  RayTracerSceneRenderer.hpp  SceneLoader.cpp  SceneLoader.hpp
src/exeng.sandbox/: CMakeLists.txt  FragmentShader.glsl  Main.cpp  PerformanceTest.cpp  VertexDisplacer.cl  VertexShader.glsl  gl_core_3_3.h
src/exeng.tests/: CMakeLists.txt  TestMain.cpp  TestMath.cpp  TestScenegraph.cpp
src/exeng.ui.demo/: CMakeLists.txt  Main.cpp
src/graphics-gl3/: GL3GraphicsDriver.cpp  GL3GraphicsDriver.hpp  GL3Screen.hpp
src/lwobject/: CMakeLists.txt  lwio.c  lwo2.h
src/raytracer/: Application.cpp  Application.hpp  CMakeLists.txt  OpenGLApp.cpp  OpenGLApp.hpp  RayTracer.cpp  RayTracer.hpp  RayTracerApp.cpp  RayTracerApp.hpp  RayTracerAppPrivate.cpp  RayTracerAppPrivate.hpp  RayTracerMain.cpp  RayTracerSceneRenderer.cpp  RayTracerSceneRenderer.hpp  SphereGeometry.cpp  SphereGeometry.hpp
src/test/: CMakeLists.txt  Main.cpp  TestMath.cpp  TestScenegraph.cpp
src/xe/: Application.cpp  Application.hpp  ApplicationRT.cpp  ApplicationRT.hpp  Boundary.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Collection.hpp  Common.hpp  Config.hpp  Core.cpp  Core.hpp  DataFormat.hpp  DataType.hpp  Enum.cpp  Enum.hpp  Exeng.hpp  Forward.hpp  GraphicsApplication.cpp  HeapBuffer.cpp  HeapBuffer.hpp  IProductFactory.hpp  ISerializable.cpp  (+33 more)
src/xe.demo/: Assets.xml  CMakeLists.txt  Demo01.cpp  DemoApp.cpp  DemoApp.hpp  PhongPipeline.cpp  PhongPipeline.hpp  Vertex.glsl
src/xe.main/: CMakeLists.txt  Main.cpp  Main.hpp
src/xe.rt/: CMakeLists.txt  HardwareRenderer.cpp  HardwareRenderer.hpp  HardwareRendererPrivate.cpp  HardwareRendererPrivate.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PhongRenderer.cpp  PhongRenderer.hpp  RayTracerApp.cpp  RayTracerApp.hpp  RayTracerApp2.cpp  RayTracerApp2.hpp  RayTracerSceneRenderer.hpp  Sampler.hpp  SceneLoader.cpp  SceneLoader.hpp  SoftwareRenderer.cpp  SoftwareRenderer.hpp
src/xe.sandbox/: CMakeLists.txt  Main.cpp  PerformanceTest.cpp  VertexShader.glsl
src/xe.sg.sw/: CMakeLists.txt  SoftwarePipeline.cpp  SoftwarePipeline.hpp
src/xe.tests/: CMakeLists.txt  TestBuffer.cpp  TestMain.cpp  TestMath.cpp  TestMatrix.cpp  TestMeshSubset.cpp  TestScenegraph.cpp
(+680 files in other folders)
