
PROJECT (libexeng)

CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

# Engine options
OPTION (XE_TESTING "Enable unit testings" OFF)

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
SET (CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE ON)

SET (XE_VERSION_MAJOR		2)
SET (XE_VERSION_MINOR		0)
SET (XE_VERSION_REVISION	0)
SET (DEST_BIN_DIR ${PROJECT_BINARY_DIR}/bin)

# Enable dynamic library generation
ADD_DEFINITIONS (-DEXENG_DYNAMIC)

# Prepropressor for Visual C++
ADD_DEFINITIONS (-D_CRT_SECURE_NO_WARNINGS)	
ADD_DEFINITIONS (-D_SCL_SECURE_NO_WARNINGS)

# Boost.
SET (Boost_USE_STATIC_LIBS OFF)
SET (Boost_USE_MULTITHREADED ON)
SET (Boost_USE_STATIC_RUNTIME OFF)

ADD_DEFINITIONS (-DBOOST_ALL_DYN_LINK)
ADD_DEFINITIONS (-DBOOST_ALL_NO_LIB)
ADD_DEFINITIONS (-DBOOST_TEST_DYN_LINK)

FIND_PACKAGE (Boost 
	COMPONENTS 
		filesystem 
		system 
		unit_test_framework 
		timer 
		log 
		thread 
	REQUIRED
)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

# Additional import libraries for unix
SET (UNIX_LIBRARIES "")

IF(UNIX AND NOT APPLE)
	SET (UNIX_LIBRARIES dl rt)	
ENDIF()

# 
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

# 
ADD_SUBDIRECTORY (src/xe)
ADD_SUBDIRECTORY (src/xe.main)

IF (XE_TESTING)
	ADD_SUBDIRECTORY (src/xe.tests)
ENDIF ()
