add_subdirectory(exeng.sandbox)
add_subdirectory(exeng.tests)
add_subdirectory(exeng.raytracer)
# add_subdirectory(exeng.audio.al)
add_subdirectory(exeng.graphics.gl3)
# add_subdirectory(exeng.compute.cl)
add_subdirectory(exeng.ui.demo)
add_subdirectory(exeng.main)
add_subdirectory(lwobject)
add_subdirectory(exeng)
