
ADD_LIBRARY(xe.sg.scene_xml SHARED SceneLoaderXML.cpp)

IF (WIN32)
    SET_PROPERTY(TARGET xe.sg.scene_xml PROPERTY RUNTIME_OUTPUT_DIRECTORY ${DEST_BIN_DIR})
ENDIF (WIN32)

TARGET_LINK_LIBRARIES (xe.sg.scene_xml xe ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES})

INSTALL (
	TARGETS xe.sg.scene_xml
		RUNTIME DESTINATION bin
		LIBRARY DESTINATION lib
)
