
IF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64") 
    ADD_DEFINITIONS(-fPIC) 
ENDIF()

ADD_LIBRARY(xe.sg.scene_xml SHARED SceneLoaderXML.cpp)

SET_PROPERTY(TARGET xe.sg.scene_xml PROPERTY CXX_STANDARD 14)

TARGET_LINK_LIBRARIES (xe.sg.scene_xml xe xmlpp ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES})

INSTALL (
	TARGETS xe.sg.scene_xml
		RUNTIME DESTINATION bin
		LIBRARY DESTINATION lib
)
