
SET (Boost_USE_STATIC_LIBS OFF)
SET (Boost_USE_MULTITHREADED ON)
SET (Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE(Boost COMPONENTS filesystem REQUIRED)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
ADD_DEFINITIONS(-DDEMO_ROOT_FOLDER="${PROJECT_SOURCE_DIR}/src/exeng.raytracer/")

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

SET (demo_src Demo01.cpp Vertex.glsl Fragment.glsl)

SOURCE_GROUP(\\ FILES ${demo_src})

ADD_EXECUTABLE(exeng.demo ${demo_src})
TARGET_LINK_LIBRARIES(exeng.demo exeng ${Boost_LIBRARIES})
